docs: stopping props table from overflowing

--- a/docs/styles/global.css
+++ b/docs/styles/global.css
@@ -1,3 +1,9 @@
 [role='dialog'] {
   z-index: 100;
 }
+
+table {
+  width: 100%;
+  table-layout: fixed;
+  overflow-wrap: break-word;
+}
